# textual

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  prd.md  pyproject.toml
docs/architecture/: README.md  c4-model.md  data-flow.md  deployment.md  maintenance.md  quality-attributes.md  security.md  threading-concurrency.md
docs/architecture/adr/: 0001-multiprocessing-for-webview.md  0002-worker-thread-pattern.md  0007-stateless-application.md  README.md
src/: __init__.py  data_fetcher.py  main.py  optimizer.py  theme.tcss  visualizer.py  webview_process.py
